my first commit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>GRID-TEMPLATE</title>
 </head>
 <body>
-
+  <h1>Hello Aylin!</h1>
   <!-- Код пишем здесь -->
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
