--- a/index.html
+++ b/index.html
@@ -12,8 +12,57 @@
   <title>GRID-TEMPLATE</title>
 </head>
 <body>
-  <h1>Hello Aylin!</h1>
-  <!-- Код пишем здесь -->
+  <header class="header"> <!-- шапка -->
+    <div class="header-overlay"></div>
+    <div class="header-menu">
+      <div class="header-menu__container">
+        <dli class="header-logo">
+          <a href="#" class="header-logo__link">
+            <span class="header-logo__accent">SITE</span>LOGO
+          </a>
+        </dli
+        <nav class="header-navbar">
+          <div class="header-navbar__btn">
+            <span class="header-navbar__btn-row"></span>
+            <span class="header-navbar__btn-row"></span>
+            <span class="header-navbar__btn-row"></span>
+          </div>
+          <ul class="header-navbar__list">
+            <li class="header-navbar__item">
+              <a class="header-navbar__link" href="#">Home</a></li>
+            <li class="header-navbar__item">
+              <a class="header-navbar__link" href="#">About</a></li>
+            <li class="header-navbar__item">
+              <a class="header-navbar__link" href="#">Contacts</a></li>
+          </ul>
+        </nav>
+      </div>
+    <div class="header-content">
+      <div class="header-content__container">
+        <h1 class="header-content__title">WE ARE REAL WEB-DEVELOPERS</h1>
+        <div class="header-content__actions">
+          <a class="btn btn--light" href="#">Learn more</a>
+          <a class="btn btn--light" href="#">Get started</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </header>
+  <section> <!-- скилы -->
+
+  </section>
+  <section> <!-- текст с картинкой -->
+
+  </section>
+  <section> <!-- форма -->
+
+  </section>
+  <section> <!-- посты -->
+
+  </section>
+  <footer> <!-- подвал -->
+
+  </footer>
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/js/main.js"></script>
