--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div class="header-overlay"></div>
     <div class="header-menu">
       <div class="header-menu__container">
-        <dli class="header-logo">
+        <div class="header-logo">
           <a href="#" class="header-logo__link">
             <span class="header-logo__accent">SITE</span>LOGO
           </a>
-        </dli
+        </div>
         <nav class="header-navbar">
           <div class="header-navbar__btn">
             <span class="header-navbar__btn-row"></span>
@@ -36,6 +36,7 @@
               <a class="header-navbar__link" href="#">Contacts</a></li>
           </ul>
         </nav>
+      </div>
       </div>
     <div class="header-content">
       <div class="header-content__container">
