--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>GRID-TEMPLATE</title>
 </head>
 <body>
-  <header class="header"> <!-- шапка -->
+  <header class="header">
     <div class="header-overlay"></div>
     <div class="header-menu">
       <div class="header-menu__container">
@@ -49,7 +49,75 @@
     </div>
   </div>
   </header>
-  <section> <!-- скилы -->
+  <section class="skills">
+    <div class="skills__container">
+      <article class="skill-item">
+        <div class="skill-item__overlay" style="background-color: #2d3651; opacity: 0.8;"></div>
+        <div class="skill-item__image" style="background-image: url(assets/img/img-html.png);"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="#">HTML</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay" style="background-color: #2d3651; opacity: 0.8;"></div>
+        <div class="skill-item__image" style="background-image: url(assets/img/img-css.png);"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="#">CSS</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay" style="background-color: #2d3651; opacity: 0.8;"></div>
+        <div class="skill-item__image" style="background-image: url(assets/img/img-markup.png);"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="#">Markup</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay" style="background-color: #2d3651; opacity: 0.8;"></div>
+        <div class="skill-item__image" style="background-image: url(assets/img/img-webdesign.png);"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="#">Web-Design</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay" style="background-color: #2d3651; opacity: 0.8;"></div>
+        <div class="skill-item__image" style="background-image: url(assets/img/img-qa.png);"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="#">Quality Assurance</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay" style="background-color: #2d3651; opacity: 0.8;"></div>
+        <div class="skill-item__image" style="background-image: url(assets/img/img-codding.png);"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="#">Coding</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay" style="background-color: #2d3651; opacity: 0.8;"></div>
+        <div class="skill-item__image" style="background-image: url(assets/img/img-adaptability.png);"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="#">Adaptability</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay" style="background-color: #2d3651; opacity: 0.8;"></div>
+        <div class="skill-item__image" style="background-image: url(assets/img/img-php.png);"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="#">PHP</a>
+        </h3>
+      </article>
+      <article class="skill-item">
+        <div class="skill-item__overlay" style="background-color: #2d3651; opacity: 0.8;"></div>
+        <div class="skill-item__image" style="background-image: url(assets/img/img-seo.png);"></div>
+        <h3 class="skill-item__title">
+          <a class="skill-item__link" href="#">SEO</a>
+        </h3>
+      </article>
+    </div>
+    <div class="skills__actions">
+      <a href="#" class="btn btn--primary">View all skills...</a>
+    </div>
 
   </section>
   <section> <!-- текст с картинкой -->
